add missing .js file reference in two committed html files

--- a/ArraysInJavascript.html
+++ b/ArraysInJavascript.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1><b><center>Arrays in javascript</center></b></h1>
+    <script src="ArraysInJavascript.js"></Script>
 </body>
 </html>
